Fix missing update button on small portrait screens

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,11 @@ body.format-gps .gps-continue:active {
     display: none;
 }
 
+.popupgeoshow {
+    display: block;
+    z-index: 100;
+}
+
 .centered {
     margin: 0 auto;
 }
@@ -93,6 +98,10 @@ div#updatepositionclick.updateposition.hide {
 }
 
 .loadinggps .hide{
+    display: none;
+}
+
+.hide {
     display: none;
 }
 
@@ -122,4 +131,8 @@ div#updatepositionclick.updateposition.hide {
     margin: 0 auto;
     max-height: 50px;
     padding:4px;
+}
+
+.course-content {
+    min-height: 600px !important;
 }
